objects/DecsOnD__PolicyExecutionRecord__c.object
<CustomObject>
    <customHelpPage>DecsOnD__PolicyExecutionRecordsHelp</customHelpPage>
    <fields>
        <fullName>DecsOnD__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Policy Execution Log</relationshipLabel>
        <relationshipName>Policy_Execution_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Action_Applied__c</fullName>
        <label>Action(s) Applied</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Applies_to__c</fullName>
        <formula>DecsOnD__Policy__r.DecsOnD__Applies_to__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applies to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assigned_Group_Id__c</fullName>
        <description>ID of the assigned group</description>
        <label>Assigned Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assigned_Group_Label__c</fullName>
        <description>Label of the Queue, Group or Role to which the record was assigned. If the user was assigned using Round Robin or Load Balancing, the Assigned_User field will also be set</description>
        <label>Assigned Group Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assigned_Group_Name__c</fullName>
        <description>Name of the Queue, Group or Role to which the record was assigned. If the user was assigned using Round Robin or Load Balancing, the Assigned_User field will also be set</description>
        <label>Assigned Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assigned_Group__c</fullName>
        <formula>IF (
        ISBLANK(DecsOnD__Assigned_Group_Id__c), 
        IF (
            ISBLANK(DecsOnD__Assigned_Group_Name__c), 
            &quot;&quot;, 
            IF (ISBLANK(DecsOnD__Assigned_Group_Label__c), DecsOnD__Assigned_Group_Name__c, DecsOnD__Assigned_Group_Label__c)
        ), 
        HYPERLINK(&quot;/setup/own/groupdetail.jsp?id=&quot; &amp; DecsOnD__Assigned_Group_Id__c , IF(ISBLANK(DecsOnD__Assigned_Group_Label__c), DecsOnD__Assigned_Group_Id__c, DecsOnD__Assigned_Group_Label__c) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assigned_Owner_Name__c</fullName>
        <formula>IF( ISBLANK(DecsOnD__Assigned_User__c),  DecsOnD__Assigned_Group_Name__c,  DecsOnD__Assigned_User__r.FirstName  &amp; &apos; &apos; &amp; DecsOnD__Assigned_User__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User to whom the main record was assigned</description>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AssignmentRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Assignment_Details__c</fullName>
        <description>Details related to the assignment</description>
        <label>Assignment Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Audit_Trail_Type__c</fullName>
        <label>Audit Trail Type (deprecated)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Policy Execution Log</relationshipLabel>
        <relationshipName>Policy_Execution_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Policy Execution Log</relationshipLabel>
        <relationshipName>Policy_Execution_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Decision_Server_Messages__c</fullName>
        <label>Detail Messages</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Invocation_DateTime__c</fullName>
        <label>Date and time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Invocation_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invocation Record</label>
        <referenceTo>DecsOnD__Invocation_Record__c</referenceTo>
        <relationshipLabel>Policy Execution Records</relationshipLabel>
        <relationshipName>Policy_Execution_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Invocation_Status__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>FAIL</fullName>
                </value>
                <value>
                    <fullName>NO ACTION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Invocation_Type__c</fullName>
        <label>Invoked from</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Button</fullName>
                </value>
                <value>
                    <fullName>Batch APEX</fullName>
                </value>
                <value>
                    <fullName>Trigger</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecsOnD__Invoked_UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoking user</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Policy_Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Policy Execution Log</relationshipLabel>
        <relationshipName>Policy_Execution_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Main_Object_Name__c</fullName>
        <label>Main Record Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Main_object_ID__c</fullName>
        <label>Main Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Main_object__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; DecsOnD__Main_object_ID__c ,  DecsOnD__Main_Object_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Policy Execution Log</relationshipLabel>
        <relationshipName>Policy_Execution_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Policy__c</fullName>
        <label>Policy</label>
        <referenceTo>DecsOnD__Policy__c</referenceTo>
        <relationshipLabel>Policy Execution Log</relationshipLabel>
        <relationshipName>Policy_Execution_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Version_Label__c</fullName>
        <label>Version Label</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DecsOnD__Version_Number__c</fullName>
        <label>Version Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>Policy Execution Record</label>
    <listViews>
        <fullName>DecsOnD__All</fullName>
        <columns>NAME</columns>
        <columns>DecsOnD__Policy__c</columns>
        <columns>DecsOnD__Main_object__c</columns>
        <columns>DecsOnD__Invocation_Status__c</columns>
        <columns>DecsOnD__Action_Applied__c</columns>
        <columns>DecsOnD__Invocation_DateTime__c</columns>
        <columns>DecsOnD__Invoked_UserID__c</columns>
        <columns>DecsOnD__Version_Number__c</columns>
        <columns>DecsOnD__Version_Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DecsOnD__My_Execution_Records</fullName>
        <columns>NAME</columns>
        <columns>DecsOnD__Policy__c</columns>
        <columns>DecsOnD__Main_object__c</columns>
        <columns>DecsOnD__Invocation_Status__c</columns>
        <columns>DecsOnD__Action_Applied__c</columns>
        <columns>DecsOnD__Invocation_DateTime__c</columns>
        <columns>DecsOnD__Version_Number__c</columns>
        <columns>DecsOnD__Version_Label__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Execution Records</label>
    </listViews>
    <nameField>
        <label>Execution ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Execution Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>